--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.0.3",
     "axios": "^0.18.0",
     "react": "^16.5.0",
+    "react-css-modules": "^4.7.7",
     "react-dom": "^16.5.0",
     "react-scripts": "1.1.5"
   },
