--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-dom": "^16.5.0",
     "resolve": "1.6.0",
     "style-loader": "0.19.0",
+    "svgo-loader": "^1.0.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
     "webpack": "3.8.1",
@@ -93,5 +94,8 @@
   },
   "eslintConfig": {
     "extends": "react-app"
+  },
+  "devDependencies": {
+    "svg-react-loader": "^0.4.5"
   }
 }
