--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^3.0.3",
+    "antd": "^3.9.2",
     "autoprefixer": "7.1.6",
     "axios": "^0.18.0",
     "babel-core": "6.26.0",
@@ -30,6 +30,7 @@
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
     "lodash": "^4.17.10",
+    "node-sass": "^4.9.3",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
@@ -40,6 +41,7 @@
     "react-dev-utils": "^5.0.2",
     "react-dom": "^16.5.0",
     "resolve": "1.6.0",
+    "sass-loader": "^7.1.0",
     "style-loader": "0.19.0",
     "svgo-loader": "^1.0.0",
     "sw-precache-webpack-plugin": "0.11.4",
