--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@wyscout/video-player": "^1.7.8",
     "antd": "^3.9.2",
     "autoprefixer": "7.1.6",
     "axios": "^0.18.0",
@@ -40,6 +41,8 @@
     "react-css-modules": "^4.7.7",
     "react-dev-utils": "^5.0.2",
     "react-dom": "^16.5.0",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
     "resolve": "1.6.0",
     "sass-loader": "^7.1.0",
     "style-loader": "0.19.0",
