--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
   },
   "scripts": {
     "start": "node scripts/start.js",
+    "belino": "HOST=localhost.wyscout.com npm run start",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom"
   },
